# Amethyst

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
engineheaders/engine/: ADF.h  Filesystem.h  master.h  weak_vector.h
engineheaders/engine/entities/: Entity.h  World.h
engineheaders/engine/filesystem/: ADF.h  Filesystem.h
engineheaders/engine/geometry/: Frustum.h  Model.h
engineheaders/engine/graphics/: Camera.h  RWorld.h  Renderer.h  Window.h
engineheaders/engine/graphics/opengl/: STDGLRenderer.h
engineheaders/engine/world/: Entity.h
include/: Shadinclude.hpp
src/: EngineMisc.cpp  Init.cpp  main.cpp
src/entities/: BasicEntities.cpp  BasicEntities.h  World.cpp
src/filesystem/: ADFParser.cpp  Filesystem.cpp
src/geometry/: Model.cpp
src/graphics/: Rendering.cpp
src/graphics/opengl/: GLMisc.cpp  GLMisc.h  STDGLCamera.cpp  STDGLCamera.h  STDGLModel.cpp  STDGLModel.h  STDGLRWorld.cpp  STDGLRWorld.h  STDGLRenderer.cpp  STDGLRenderer.h  STDGLShaderSystem.cpp  STDGLShaderSystem.h  STDGLWindow.cpp  STDGLWindow.h
src/utils/: EngineMisc.cpp
testgame/: testentity.adf
testgame/models/: backpack.adf  cube.adf  error.adf  multimesh.adf  sphere.adf
testgame/saves/: hi.adf  testsave.adf
testgame/scripts/shaders/: glshaders.adf
testgame/scripts/shaders/opengl/: STDGLCamera.incl  STDGLModel.incl  STDGLModel_InstanceBlanker.cs  STDGLModel_InstancePreprocess.cs  STDGLModel_InstanceReplicator.cs  generic.vs
